# flaskrpg

./: README.md  pyproject.toml  rpg_game.py
src/flaskrpg/: __init__.py  app.py
src/flaskrpg/combat/: routes.py
src/flaskrpg/helpers/: __init__.py
src/flaskrpg/templates/: combat.html  player.html  shop.html
