[project]
name = "flaskrpg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flaskrpg"]

[tool.hatch]
